Thêm tính năng Azure Blob Storage và tải lên tệp • Tích hợp Azure Blob Storage để tải lên các tệp phương tiện. • Thêm Entity MediaFile • Tạo endpoint API Upload với xác thực tệp (kích thước/loại). • Cải thiện giao diện người dùng với FilePond để tải lên và lightbox để xem Profile Picture và Cover Picture.

--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -73,13 +73,13 @@
         flex: 3;
     }
 
-    .btn.btn-light.rounded-circle{
+    /*.btn.btn-light.rounded-circle{
         background-color: rgba(211, 212, 213, 0.6)
     }
 
     .btn.btn-light.rounded-circle:hover{
         background-color: rgba(211, 212, 213, 1)!important 
-    }
+    }*/
 
     #MessageList_SearchInput {
         padding: 4px 12px 4px 2px;
