--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
     <!-- Datepicker -->
     <script type="text/javascript" src="/js/datepicker-vi.js"></script>
+    <!-- FilePond: Upload File and Zoom Image -->
+    <link href="https://unpkg.com/filepond/dist/filepond.min.css" rel="stylesheet" />
+    <!-- FilePond plugins CSS -->
+    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css" rel="stylesheet">
 </head>
 <body>
     <div style="margin: 16px 0; padding: 0px 16px;">
@@ -36,6 +40,7 @@
     @* Thông báo - alert *@
     <div id="ThongBao-container" class="toast-container"></div>
 
+    <!-- Modal -->
     <div class="modal fade"
          id="modal-default"
          tabindex="-1"
@@ -46,16 +51,42 @@
         </div>
     </div>
 
+    <!-- LightBox -->
+    <div class="modal fade" id="lightboxModal" 
+         tabindex="-1" 
+         aria-hidden="true" 
+         data-bs-keyboard="false" data-bs-backdrop="static">
+        <div id="background-blur" class="position-absolute vw-100 vh-100"
+             style="background-repeat: no-repeat; background-size: cover; background-position: center; filter: blur(10px)"
+             >
+        </div>
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div id="modal-image" class="modal-content bg-transparent border-0" 
+                 style="box-shadow: none !important; 
+                        height: calc(100vh - var(--mdb-modal-margin) * 4); 
+                        background-repeat: no-repeat; 
+                        background-size: contain; 
+                        background-position: center; ">
+            </div>
+        </div>
+    </div>
+
+    <!-- Popover -->
     <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.umd.min.js"></script>
-
     <!-- Custom js -->
     <script src="~/js/site.js" asp-append-version="true"></script>
-
     <!-- Script Show Loading -->
     <script src="https://malsup.github.io/jquery.blockUI.js"></script>
+    <!-- File Upload -->
+    <script src="https://unpkg.com/filepond/dist/filepond.min.js"></script>
+    <!-- FilePond plugins -->
+    <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js"></script>
+    <script src="https://unpkg.com/filepond-plugin-image-zoom/dist/filepond-plugin-image-zoom.min.js"></script>
+    <script src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
@@ -164,6 +195,15 @@
             });
             showLoading(false);
         }
+    </script>
+
+    <!-- Register plugins FilePond -->
+    <script>
+        FilePond.registerPlugin(
+            FilePondPluginImagePreview,
+            FilePondPluginImageZoom,
+            FilePondPluginFileValidateSize
+        );
     </script>
 </body>
 </html>
