Refactor LightBox and improve UI functionality
+ Refactor LightBox để dễ sử dụng hơn, thêm nút tải xuống mới và cải thiện bố cục và khả năng phản hồi.
+ Đã cập nhật `Index.cshtml` để đảm bảo điều chỉnh UI diễn ra sau khi ảnh đại diện được tải. Đã cải tiến `ShowLightBox()` trong `site.js` để điều chỉnh kích thước modal một cách động và chuẩn bị chức năng tải xuống. Đã thêm một lớp CSS mới để căn giữa các phần tử.

--- a/FE/Views/Shared/ConfigProfile/_PeronalInforPartial.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_PeronalInforPartial.cshtml
@@ -174,19 +174,19 @@
                 </ul>
 
                 <!-- Cover, Profile picture and Name -->
-                <img src="@Model.CoverPicture" 
+                <img src="https://i.pinimg.com/1200x/54/e8/ff/54e8ff9c66575369e57ab0a101cdf18a.jpg"
                      height="200"
-                     onclick="ShowLightBox(this.src)" 
+                     onclick="ShowLightBox(this.src)"
                      style="object-fit: cover; width: 100%;" />
                 <div class="p-3 pb-0">
                     <div class="user-info">
                         <div class="position-relative me-3" style="width: 100px">
-                            <img src="@Model.ProfilePicture" 
+                            <img src="@Model.ProfilePicture"
                                  class="profile-picture"
-                                 onclick="ShowLightBox(this.src)"/>
+                                 onclick="ShowLightBox(this.src)" />
                             <button id="BtnUpdateProfilePicture"
-                                    type="button" 
-                                    class="position-absolute rounded-circle btn btn-light p-2" 
+                                    type="button"
+                                    class="position-absolute rounded-circle btn btn-light p-2"
                                     style="right: 0; bottom: -30px; outline: none"
                                     data-mdb-ripple-init data-mdb-ripple-color="dark">
                                 <i class="fa-solid fa-camera-retro"></i>
