Hoàng Nhi - Thêm chức năng tải file trong LightBox

--- a/FE/Views/Shared/Modal/_ModalPartial.cshtml
+++ b/FE/Views/Shared/Modal/_ModalPartial.cshtml
@@ -35,13 +35,12 @@
     </div>
 
     <div id="modal-option" class="position-absolute" style="z-index: 1; top: 30px; right: 30px">
-        <button onclick="DownloadLightBox()"
-                type="button" 
-                id="BtnDownload" 
-                class="btn btn-dark rounded-circle p-4 position-relative" 
-                data-mdb-ripple-init>
+        <a download href=""
+           id="BtnDownload" 
+           class="btn btn-dark rounded-circle p-4 position-relative" 
+           data-mdb-ripple-init>
             <i class="fa-solid fa-file-arrow-down fs-3 position-absolute-center"></i>
-        </button>
+        </a>
         <button type="button" onclick="CloseLightBox()" 
                 class="btn btn-dark rounded-circle p-4 position-relative" 
                 data-mdb-ripple-init>
