--- a/FE/Views/Shared/ConfigProfile/_PeronalInforPartial.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_PeronalInforPartial.cshtml
@@ -174,7 +174,7 @@
                 </ul>
 
                 <!-- Cover, Profile picture and Name -->
-                <img src="https://i.pinimg.com/1200x/54/e8/ff/54e8ff9c66575369e57ab0a101cdf18a.jpg"
+                <img src="@Model.CoverPicture"
                      height="200"
                      onclick="ShowLightBox(this.src)"
                      style="object-fit: cover; width: 100%;" />
@@ -293,6 +293,7 @@
         });
 
         document.getElementById("BtnUpdateProfilePicture").addEventListener("click", function () {
+            RenderUpdateProfilePicture()
             let updateProfilePictureTab = new bootstrap.Tab(document.getElementById("pills-update-profile-picture-tab"));
             updateProfilePictureTab.show(); 
         });
@@ -312,6 +313,10 @@
                 ShowThongBaoThatBai(error)
             }
         })
+    }
+
+    function RenderUpdateProfilePicture() {
+
     }
 
     function UpdateProfile() {
